Applied extreme scroll glitch settings

--- a/about.html
+++ b/about.html
@@ -35,10 +35,12 @@
                     </p>
                 </div>
 
-                <div class="hero-image-wrapper">
-                    <div class="glow-blob"></div> <img src="assets/images/profile.jpg" alt="Ewoud Janus" class="profile-img">
+                <div class="hero-image-wrapper" id="glitch-wrapper">
+                    <div class="glow-blob"></div>
+                    <img src="assets/images/profile.jpg" class="profile-img glitch-layer cyan" alt="">
+                    <img src="assets/images/profile.jpg" class="profile-img glitch-layer magenta" alt="">
+                    <img src="assets/images/profile.jpg" alt="Ewoud Janus" class="profile-img main-img">
                 </div>
-
             </div>
         </div>
 
