--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
             <a href="mastering-tinkering/index.html" class="project-card">
                 <div class="card-image">
-                    <div style="width:100%; height:100%; background: linear-gradient(45deg, #1a1a1a, #2a2a2a);"></div>
+                    <img src="assets/images/tinkering-thumb.jpg" alt="Mastering Tinkering Project" class="project-thumb">
                     <span class="tag">Coursework</span>
                 </div>
                 <div class="card-info">
@@ -38,7 +38,7 @@
 
             <a href="#" class="project-card">
                 <div class="card-image">
-                    <div style="width:100%; height:100%; background: linear-gradient(45deg, #111, #222);"></div>
+                    <img src="assets/images/portfolio-thumb.jpg" alt="Portfolio 2026 Project" class="project-thumb">
                     <span class="tag">Web Dev</span>
                 </div>
                 <div class="card-info">
@@ -49,7 +49,7 @@
 
             <a href="#" class="project-card">
                 <div class="card-image">
-                    <div style="width:100%; height:100%; background: linear-gradient(45deg, #0f172a, #1e293b);"></div>
+                    <img src="assets/images/HaH-thumb.png" alt="Hospital at Home Toolkit Project" class="project-thumb">
                     <span class="tag">UX/UI Design</span>
                 </div>
                 <div class="card-info">
