Assignment 0 and upcoming assignments placeholders

--- a/mastering-tinkering/index.html
+++ b/mastering-tinkering/index.html
@@ -37,6 +37,10 @@
                 The goal was to set up a simple and practical online portfolio. I chose to build a custom solution 
                 using HTML5 and GitHub Pages to demonstrate my web development skills.
             </p>
+
+            <div class="tinker-card" style="max-width: 500px; margin: 30px auto;">
+                <img src="../assets/images/assignment0.png" alt="Portfolio Homepage" style="height: auto; width: 100%;">
+            </div>
         </article>
 
         <article id="a1-1" class="assignment">
@@ -114,6 +118,96 @@
                 <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
                 <button class="next" onclick="plusSlides(1)">&#10095;</button>
             </div>
+        </article>
+
+        <article id="a2-2" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 2.2 • Coming Up</span>
+            <h2>Design a building block - fabricate</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a3-1" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 3.1 • Coming Up</span>
+            <h2>Properties of Tinkering Materials</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a2-3" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 2.3 • Coming Up</span>
+            <h2>Design a building block - make it interoperable</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a3-2" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 3.2 • Coming Up</span>
+            <h2>Properties of Tinkering Materials - extension</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a4-0" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 4.0 • Coming Up</span>
+            <h2>Scaffolding material: programming metaphor</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a2-4" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 2.4 • Coming Up</span>
+            <h2>Design your building block - evaluate</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a3-3" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 3.3 • Coming Up</span>
+            <h2>Properties of Tinkering Materials - wide walls</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a5-1" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 5.1 • Coming Up</span>
+            <h2>Group Assignment: concept design</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a1-2" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 1.2 • Coming Up</span>
+            <h2>Tinkering Spaces - reflect back</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a4-1" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 4.1 • Coming Up</span>
+            <h2>Overview on Design Methods</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a5-2" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 5.2 • Coming Up</span>
+            <h2>Group Assignment: physical MVP, first iteration</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a4-2" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 4.2 • Coming Up</span>
+            <h2>Tinkering as Design Method in your Field</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a5-3" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 5.3 • Coming Up</span>
+            <h2>Group Assignment - complete design, digital poster</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a5-4" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 5.4 • Coming Up</span>
+            <h2>Group Project - evaluation</h2>
+            <div class="placeholder-box"></div>
+        </article>
+
+        <article id="a0-2" class="assignment placeholder">
+            <span class="assignment-meta">Assignment 0.2 • Coming Up</span>
+            <h2>Portfolio - submission</h2>
+            <div class="placeholder-box"></div>
         </article>
     </div>
 
