Complete badges and jumpto integration

--- a/mastering-tinkering/index.html
+++ b/mastering-tinkering/index.html
@@ -35,7 +35,10 @@
         </div>
 
         <article id="a0-1" class="assignment">
-            <span class="assignment-meta">Assignment 0.1 • Completed</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 0.1</span>
+                <span class="status-tag status-completed">Completed</span>
+            </div>
             <h2>Portfolio Setup</h2>
             <p>
                 The goal was to set up a simple and practical online portfolio. I chose to build a custom solution 
@@ -48,7 +51,10 @@
         </article>
 
         <article id="a1-1" class="assignment">
-            <span class="assignment-meta">Assignment 1.1 • Completed</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 1.1</span>
+                <span class="status-tag status-completed">Completed</span>
+            </div>
             <h2>Tinkering Spaces (Photo Safari)</h2>
             <p>
                 A look at the three environments where I spend most of my time creating, learning, and experimenting.
@@ -88,7 +94,10 @@
         </article>
 
         <article id="a2-1" class="assignment">
-            <span class="assignment-meta">Assignment 2.1 • Completed</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 2.1</span>
+                <span class="status-tag status-completed">Completed</span>
+            </div>
             <h2>Design a Building Block: Screw Shapes</h2>
             <p>
                 <strong>Challenge:</strong> Design a block that can be used for tinkering and quick prototyping.
@@ -122,91 +131,136 @@
         </article>
 
         <article id="a2-2" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 2.2 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 2.2</span>
+                <span class="status-tag status-completed">Next Up</span>
+            </div>
             <h2>Design a building block - fabricate</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a3-1" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 3.1 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 3.1</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Properties of Tinkering Materials</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a2-3" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 2.3 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 2.3</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Design a building block - make it interoperable</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a3-2" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 3.2 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 3.2</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Properties of Tinkering Materials - extension</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a4-0" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 4.0 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 4.0</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Scaffolding material: programming metaphor</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a2-4" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 2.4 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 2.4</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Design your building block - evaluate</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a3-3" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 3.3 • Coming Up</span>
+            <div class="assignment-header">
+        <span class="assignment-id">Assignment 3.3</span>
+        <span class="status-tag status-coming">Coming Up</span>
+    </div>
             <h2>Properties of Tinkering Materials - wide walls</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a5-1" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 5.1 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 5.1</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Group Assignment: concept design</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a1-2" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 1.2 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 1.2</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Tinkering Spaces - reflect back</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a4-1" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 4.1 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 4.1</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Overview on Design Methods</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a5-2" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 5.2 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 5.2</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Group Assignment: physical MVP, first iteration</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a4-2" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 4.2 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 4.2</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Tinkering as Design Method in your Field</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a5-3" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 5.3 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 5.3</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Group Assignment - complete design, digital poster</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a5-4" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 5.4 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 5.4</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Group Project - evaluation</h2>
             <div class="placeholder-box"></div>
         </article>
 
         <article id="a0-2" class="assignment placeholder">
-            <span class="assignment-meta">Assignment 0.2 • Coming Up</span>
+            <div class="assignment-header">
+                <span class="assignment-id">Assignment 0.2</span>
+                <span class="status-tag status-coming">Coming Up</span>
+            </div>
             <h2>Portfolio - submission</h2>
             <div class="placeholder-box"></div>
         </article>
