--- a/about.html
+++ b/about.html
@@ -35,12 +35,16 @@
                     </p>
                 </div>
 
-                <div class="hero-image-wrapper" id="glitch-wrapper">
-                    <div class="glow-blob"></div>
-                    <img src="assets/images/profile.jpg" class="profile-img glitch-layer cyan" alt="">
-                    <img src="assets/images/profile.jpg" class="profile-img glitch-layer magenta" alt="">
-                    <img src="assets/images/profile.jpg" alt="Ewoud Janus" class="profile-img main-img">
+                <div class="hero-image-wrapper" id="profile-wrapper">
+                    <img src="assets/images/profile.jpg" id="profile-static" alt="Ewoud Janus">
+                    
+                    <div id="profile-hint">
+                        <i class="fas fa-fingerprint"></i>
+                        <span>Deconstruct</span>
+                    </div>
                 </div>
+
+                <canvas id="explosion-canvas"></canvas>
             </div>
         </div>
 
