Profile Image glitch effect

--- a/about.html
+++ b/about.html
@@ -38,9 +38,11 @@
                 <div class="hero-image-wrapper" id="profile-wrapper">
                     <img src="assets/images/profile.jpg" id="profile-static" alt="Ewoud Janus">
                     
+                    <canvas id="hud-canvas"></canvas>
+
                     <div id="profile-hint">
-                        <i class="fas fa-fingerprint"></i>
-                        <span>Deconstruct</span>
+                        <i class="fas fa-terminal"></i>
+                        <span>Analyze_System</span>
                     </div>
                 </div>
 
