Projet page addition and creation

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
 
         <div class="project-grid">
 
-            <a href="mastering-tinkering/index.html" class="project-card">
+
+
+            <a href="projects/mastering-tinkering/index.html" class="project-card">
                 <div class="card-image">
                     <img src="assets/images/tinkering-thumb.jpg" alt="Mastering Tinkering Project" class="project-thumb">
                     <span class="tag">Coursework</span>
@@ -36,9 +38,20 @@
                 </div>
             </a>
 
-            <a href="#" class="project-card">
+                        <a href="projects/pomodoro-pet/index.html" class="project-card">
                 <div class="card-image">
-                    <img src="assets/images/portfolio-thumb.jpg" alt="Portfolio 2026 Project" class="project-thumb">
+                    <img src="assets/images/pomodoro-thumb.jpg" alt="Pomodoro Pet App" class="project-thumb">
+                    <span class="tag">Mobile App</span>
+                </div>
+                <div class="card-info">
+                    <h3>Pomodoro Pet</h3>
+                    <p>A gamified productivity app blending the Pomodoro technique with Tamagotchi-style mechanics to build better focus habits.</p>
+                </div>
+            </a>
+
+            <a href="projects/portfolio-2026/index.html" class="project-card">
+                <div class="card-image">
+                    <img src="assets/images/portfolio-thumb.jpg" alt="Portfolio 2026" class="project-thumb">
                     <span class="tag">Web Dev</span>
                 </div>
                 <div class="card-info">
@@ -47,9 +60,9 @@
                 </div>
             </a>
 
-            <a href="#" class="project-card">
+            <a href="projects/hospital-at-home/index.html" class="project-card">
                 <div class="card-image">
-                    <img src="assets/images/HaH-thumb.png" alt="Hospital at Home Toolkit Project" class="project-thumb">
+                    <img src="assets/images/HaH-thumb.png" alt="Hospital at Home Toolkit" class="project-thumb">
                     <span class="tag">UX/UI Design</span>
                 </div>
                 <div class="card-info">
