Contact page and pomodoro images

--- a/projects/hospital-at-home/index.html
+++ b/projects/hospital-at-home/index.html
@@ -15,7 +15,7 @@
         /* 1. CINEMATIC VIDEO HEADER */
         .video-showcase {
             width: 100%;
-            height: 60vh; /* Takes up 60% of the screen height */
+            height: 60vh;
             background: #000;
             border-radius: 20px;
             overflow: hidden;
@@ -28,7 +28,7 @@
         .video-showcase video {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensures video fills the box perfectly */
+            object-fit: cover;
         }
 
         /* 2. PROJECT META DATA */
@@ -137,50 +137,50 @@
             
             <h2>The Challenge</h2>
             <p>
-                Hospital-at-Home programs improve efficiency but often burden patients with clinical tasks they aren't trained for[cite: 26, 30]. The current toolkit is a "loose collection of devices" [cite: 32] causing cognitive overload and anxiety for older adults[cite: 43]. 
+                Hospital-at-Home programs improve efficiency but often burden patients with clinical tasks they aren't trained for. The current toolkit is a "loose collection of devices" causing cognitive overload and anxiety for older adults.
             </p>
             <p>
-                Our goal was to bridge the gap between <strong>clinical accuracy</strong> and <strong>home comfort</strong>, creating a system that reduces stress through intuitive design[cite: 47].
+                Our goal was to bridge the gap between clinical accuracy and home comfort, creating a system that reduces stress through intuitive design.
             </p>
 
             <div class="pull-quote">
-                "We rethought the toolkit not as a medical box, but as a piece of furniture—a radio-like cabinet that guides the user through a calm ritual." [cite: 99]
+                "We rethought the toolkit not as a medical box, but as a piece of furniture—a radio-like cabinet that guides the user through a calm ritual."
             </div>
 
             <h2>The Concept: "The Smart Cabinet"</h2>
             <p>
-                We designed a wooden, furniture-like station that organizes all measurement tools (Blood Pressure, Oxygen, Thermometer, Scale) into a single, guided workflow[cite: 18].
+                We designed a wooden, furniture-like station that organizes all measurement tools (Blood Pressure, Oxygen, Thermometer, Scale) into a single, guided workflow.
             </p>
             
             <div class="sensory-grid">
                 <div class="sensory-card">
                     <span class="sensory-icon">💡</span>
                     <h3>Visual Guidance</h3>
-                    <p>Soft ambient lights guide the user step-by-step from top to bottom, lighting up only the device needed next[cite: 19].</p>
+                    <p>Soft ambient lights guide the user step-by-step from top to bottom, lighting up only the device needed next.</p>
                 </div>
                 <div class="sensory-card">
                     <span class="sensory-icon">🔊</span>
                     <h3>Auditory Feedback</h3>
-                    <p>Replaced harsh medical beeps with gentle "confirmation chimes" and supportive voice cues for errors[cite: 105].</p>
+                    <p>Replaced harsh medical beeps with gentle "confirmation chimes" and supportive voice cues for errors.</p>
                 </div>
                 <div class="sensory-card">
                     <span class="sensory-icon">🪵</span>
                     <h3>Tactile Warmth</h3>
-                    <p>Matte wood and textile finishes make the device feel like a home accessory, not a hospital machine[cite: 20].</p>
+                    <p>Matte wood and textile finishes make the device feel like a home accessory, not a hospital machine.</p>
                 </div>
             </div>
 
             <h2>User Journey</h2>
             <p>
-                The interaction follows a "Poka-Yoke" (mistake-proofing) principle[cite: 270]. 
+                The interaction follows a "Poka-Yoke" (mistake-proofing) principle.
                 <br><br>
-                1. <strong>Wake Up:</strong> The cabinet glows softly to remind the patient[cite: 192].<br>
-                2. <strong>The Ritual:</strong> The user presses "Start". The top shelf lights up. As they finish one task, the system automatically sends the data and lights up the next shelf[cite: 198].<br>
-                3. <strong>Completion:</strong> After weighing, the cabinet signals "All Done" with a green glow. No apps to open, no numbers to write down[cite: 206].
+                1. <strong>Wake Up:</strong> The cabinet glows softly to remind the patient.<br>
+                2. <strong>The Ritual:</strong> The user presses "Start". The top shelf lights up. As they finish one task, the system automatically sends the data and lights up the next shelf.<br>
+                3. <strong>Completion:</strong> After weighing, the cabinet signals "All Done" with a green glow. No apps to open, no numbers to write down.
             </p>
 
             <h2 style="margin-top: 60px;">Final Prototype</h2>
-            <img src="../../assets/images/HaH-thumb.png" style="width: 100%; border-radius: 12px; border: 1px solid rgba(255,255,255,0.1); margin-top: 20px;">
+            <img src="../../assets/images/HaH-thumb.png" style="width: 100%; border-radius: 12px; border: 1px solid rgba(255,255,255,0.1); margin-top: 20px;" alt="Final Prototype Render">
             <p style="text-align: center; color: #666; font-size: 0.9rem; margin-top: 10px;">Render of the "Smart Cabinet" concept.</p>
 
         </div>
