--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="contact-actions">
                         
                         <a href="assets/documents/cv.pdf" target="_blank" class="cyber-button">
-                            <i class="fas fa-file-download"></i> Download Data_Packet (CV)
+                            <i class="fas fa-file-download"></i> Download CV
                         </a>
 
                         <div class="social-grid">
