--- a/projects/portfolio-2026/index.html
+++ b/projects/portfolio-2026/index.html
@@ -79,9 +79,21 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><a href="../../index.html">EJ.</a></div>
+        <div class="nav-left">
+            <div class="logo"><a href="../../index.html">EJ.</a></div>
+            
+            <div class="nav-icons">
+                <a href="mailto:etcjanus@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/ewoudjanus/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/etc_modeling" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/ETCJanus" target="_blank"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+
         <div class="links">
-            <a href="../../projects.html">Back to Projects</a>
+            <a href="../../projects.html">Projects</a>
+            <a href="../../about.html">About</a>
+            <a href="../../index.html#contact">Contact</a>
         </div>
     </nav>
 
