--- a/projects/hospital-at-home/index.html
+++ b/projects/hospital-at-home/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../styles.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <style>
         /* --- PROJECT SPECIFIC STYLES --- */
