Tinkering Text improvement

--- a/projects/mastering-tinkering/index.html
+++ b/projects/mastering-tinkering/index.html
@@ -91,7 +91,7 @@
                     <div class="card-content">
                         <strong>The Piano</strong>
                         <div class="caption">
-                            The place where I feel most at ease. It allows me to step away from the screen and tinker purely with music, rhythm, and flow.
+                            The place where I feel most at ease. It allows me to relax and tinker purely with music, rhythm, and flow.
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                 <div class="carousel-slide">
                     <img src="../../assets/images/omni-sketches.png" alt="Initial Sketches" class="studio-bg">
                     <div class="carousel-caption-bar">
-                        <strong>Process:</strong> 8 different sketch iterations exploring the hinge mechanism.
+                        <strong>Process:</strong> 8 different sketch iterations exploring diifferent options.
                     </div>
                 </div>
 
